removed function of color

--- a/moviesystem/static/moviesystem/css/result.css
+++ b/moviesystem/static/moviesystem/css/result.css
@@ -60,3 +60,8 @@
     z-index: -1;
     overflow: hidden;
 }
+.adult_movie{
+    border: 1px solid grey;
+    padding: 3px;
+    font-weight: 600;
+}
