finished for pc

--- a/moviesystem/templates/moviesystem/app/result.html
+++ b/moviesystem/templates/moviesystem/app/result.html
@@ -8,7 +8,7 @@
     <div class="row">
         <!-- searched movie -->
         <div class="col-md-12">
-            <div class="card mb-3 movie_card" style="background:linear-gradient(90deg,black 15%, black 38%, rgba(255,255,255,0.8327906162464986) 96%);">
+            <div class="card mb-3 movie_card" style="background:linear-gradient(90deg,black 15%, black 38%, rgba(255,255,255,0.7827906162464986) 96%);border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 poster_img" >
                         <img
@@ -64,6 +64,7 @@
             </div>
         </div>
     </div>
+    <br>
     <!-- recommended movies -->
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies_information %}
