added readme and minor change to moviesystem

--- a/moviesystem/templates/moviesystem/app/result.html
+++ b/moviesystem/templates/moviesystem/app/result.html
@@ -66,6 +66,7 @@
     </div>
     <br>
     <!-- recommended movies -->
+     <h3 style="margin-bottom: 10px;">Recommended Movies</h3>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for movie in movies_information %}
         <div class="col col-sm-6 col-md-4 col-lg-3">
