linked the model

--- a/MCQgenerator/templates/MCQgenerator/app/index.html
+++ b/MCQgenerator/templates/MCQgenerator/app/index.html
@@ -3,6 +3,12 @@
 
 {% block index %}
 
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            
+        </div>
+    </div>
+</div>
 
 {% endblock index %}
