--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -111,6 +111,37 @@
             </a>
         </div>
     </div>
+
+    <br>
+    <h2>Large Language Models</h2>
+    <hr style="margin: 0;"><br>
+    <div class="row">
+        <div class="col-md-6">
+            <a href="{% url 'MCQgenerator:MCQgenerator' %}" style="text-decoration: none;">
+                <div class="card mb-3" style="width: 100%;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img style="max-height: 200px;" src="{% static 'core/images/mcq.png' %}" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">MCQgenerator Bot</h5>
+                                <p class="card-text">
+                                    The MCQ generator uses Gemini LLM and LangChain to create multiple-choice questions automatically. This tool generates diverse and high-quality questions, making it valuable for education and assessments.</p>
+                                <p class="card-text" style="display: flexbox;flex-wrap: wrap;">
+                                    <div class="tech-used">Gemini LLM</div>
+                                    <div class="tech-used">Langchain</div>
+                                    <div class="tech-used">Numpy</div>
+                                    <div class="tech-used">Pandas</div>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
     <br>
 </div>
 
