--- a/MCQgenerator/static/MCQgenerator/css/index.css
+++ b/MCQgenerator/static/MCQgenerator/css/index.css
@@ -1,50 +1,126 @@
-label{
-    display: block;
-    color: #454545;
-    font-weight: 600;
-}
-.copy-btn,
-.copy_btn,
-.check_btn{
-    background-color: transparent;
-    border: 1px solid #454545;
-    border-radius: 5px;
-    color: #454545;
-    font-weight: 600;
-}
-.copy-btn:hover,
-.copy_btn:hover,
-.check_btn:hover{
-    background-color: #454545;
-    border: 1px solid #454545;
-    color: #fafafa;
+.mcq .mcq-answer {
+    position: relative;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background: #F5F5F5;
+    border: 1px solid #CCC;
+    border-radius: 4px;
+    padding-right: 120px;
+    cursor: pointer;
 }
 
-#id_glucose,
-#id_blood_pressure,
-#id_skin_thickness,
-#id_insulin,
-#id_bmi,
-#id_dbf,
-#id_age,
-#id_pregnancies {
-    font-family: "SF Pro";
-    width: 100%;
-    font-size: 1rem;
-    border: 1.5px solid #000;
-    border-radius: 0.5rem;
-    box-shadow: 2.5px 3px 0 #000;
-    outline: none;
-    transition: ease 0.25s;
-    padding: 0 10px;
+.mcq .mcq-answer p {
+    z-index: 1000;
 }
-#id_glucose:focus,
-#id_blood_pressure:focus,
-#id_skin_thickness:focus,
-#id_insulin:focus,
-#id_bmi:focus,
-#id_dbf:focus,
-#id_age:focus,
-#id_pregnancies:focus {
-    box-shadow: 5.5px 7px 0 black;
+
+.mcq .circle {
+    position: relative;
+    height: 1em;
+    width: 1em;
+    margin-left: 1em;
+    flex: 0 0 auto;
+    border-radius: 50%;
+    border: 0.3em solid #666677;
+    background-color: transparent;
+}
+
+.mcq .mcq-answer p {
+    display: block;
+    margin: 4px;
+    z-index: 10;
+}
+
+.mcq .feedback {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    background-color: #a94442;
+    color: white;
+    min-height: 100%;
+    max-width: 88.6%;
+    padding: 0 1em;
+    border-radius: 5px;
+    z-index: 100;
+    opacity: 1;
+    visibility: hidden;
+}
+
+.mcq .correct .feedback {
+    background-color: #3c763d;
+}
+
+.mcq input {
+    display: none;
+}
+
+.mcq .highlight {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+.mcq input:hover~.highlight {
+    background-color: #CCC;
+}
+
+.mcq input:checked~.highlight {
+    background-color: #f2dede;
+}
+
+.mcq .correct input:checked~.highlight {
+    background-color: #dff0d8;
+}
+
+.mcq input:checked~.circle {
+    background-color: #ebccd1;
+    ;
+    border-color: #a94442;
+}
+
+.mcq .correct input:checked~.circle {
+    background-color: #d6e9c6;
+    border-color: #3c763d;
+
+}
+
+.mcq input:checked~.feedback {
+    visibility: visible;
+    -webkit-animation: feedbackfade 3s ease 3s;
+    animation: feedbackfade 3s ease 3s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+.question{
+    margin-top: 1em;
+}
+#id_nos,
+#id_name{
+    width: 100%;
+    background-color: transparent;
+    border: 2px solid rgb(207, 207, 207);
+    border-radius: 5px;
+    padding: 5px;
+}
+.check_btn{
+    background-color: transparent;
+    border: 1px solid rgb(207, 207, 207);
+    border-radius: 5px;
+    color: rgb(129, 129, 129);
+}
+.check_btn:hover{
+    background-color: rgb(207, 207, 207);
+    border: 1px solid #454545;
+    color: #454545;
+}
+form label{
+    color: #454545;
+    font-weight: 700;
 }
