--- a/MCQgenerator/templates/MCQgenerator/partial/style.html
+++ b/MCQgenerator/templates/MCQgenerator/partial/style.html
@@ -1,4 +1,4 @@
 {% load static %}
 {% block styleindex %}
-<link rel="stylesheet" href="{% static 'diabetes/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'MCQgenerator/css/index.css' %}">
 {% endblock styleindex %}
