--- a/core/templates/core/partial/main-base.html
+++ b/core/templates/core/partial/main-base.html
@@ -14,10 +14,12 @@
     {% include 'core/component/loader.html' %}
     {% include 'core/component/navbar.html' %}
 
-    {% block content %}
-    {% endblock content %}
-
-    {% include 'core/component/footer.html' %}
+    <div style="display: flex;flex-direction: column;min-height: 88vh;justify-content: space-between;">
+        {% block content %}
+        {% endblock content %}
+    
+        {% include 'core/component/footer.html' %}
+    </div>
 </body>
     {% include 'core/partial/main-script.html' %}
 
