--- a/asktoaske/templates/asktoaske/partial/script.html
+++ b/asktoaske/templates/asktoaske/partial/script.html
@@ -1,4 +1,4 @@
 {% load static %}
 {% block scriptindex %}
-
+<script src="{% static 'asktoaske/js/index.js' %}"></script>
 {% endblock scriptindex %}
