--- a/core/templates/core/app/index.html
+++ b/core/templates/core/app/index.html
@@ -145,25 +145,24 @@
                 <div class="card mb-3" style="width: 100%;">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img style="max-height: 200px;" src="{% static 'core/images/mcq.png' %}" class="img-fluid rounded-start" alt="...">
+                            <img style="max-height: 200px;" src="{% static 'core/images/QA.png' %}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">MCQgenerator Bot</h5>
-                                <p class="card-text">
-                                    The MCQ generator uses Gemini LLM and LangChain to create multiple-choice questions automatically. This tool generates diverse and high-quality questions, making it valuable for education and assessments.</p>
-                                <p class="card-text" style="display: flexbox;flex-wrap: wrap;">
-                                    <div class="tech-used">Gemini LLM</div>
-                                    <div class="tech-used">Langchain</div>
-                                    <div class="tech-used">Numpy</div>
-                                    <div class="tech-used">Pandas</div>
-                                </p>
+                                <h5 class="card-title">Ask To Aske Bot</h5>
+                                <p class="card-text">Experience My QA Bot, powered by Langchain Gemini AI. It utilizes the text-embedding-004 embeddings and the Gemini 1.5 Pro LLM model, coupled with ChromaDB for efficient embeddings storage.</p>
+                                <div>
+                                    <span class="tech-used">Gemini LLM</span>
+                                    <span class="tech-used">Langchain</span>
+                                    <span class="tech-used">ChromaDB</span>
+                                    <span class="tech-used">RetrievalQA</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </a>
-        </div>
+        </div>        
     </div>
 
     <br>
