--- a/asktoaske/templates/asktoaske/partial/style.html
+++ b/asktoaske/templates/asktoaske/partial/style.html
@@ -1,4 +1,5 @@
 {% load static %}
 {% block styleindex %}
 <link rel="stylesheet" href="{% static 'asktoaske/css/index.css' %}">
+<link rel="stylesheet" href="{% static 'asktoaske/css/chatbot.css' %}">
 {% endblock styleindex %}
